# senator-exctr

./: .gitignore  CMakeLists.txt  Note.txt  README.md
include/: instance_utils.h  offsets.h
loader/: loader.cpp
src/: exports.cpp  exports.h  http_server.h  inject.h  main.cpp  manual_map.h  winhttp_client.h
src/execution/: executor.h  luau_wrapper.h  rsb1_encoder.h  sunc_payload.h  unc_payload.h
src/memory/: instance_walker.h  pattern_scanner.h
src/process/: scanner.h
src/syscalls/: syscalls.asm  syscalls.h
tools/: loader_test.cpp
ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RblxCore.cs  RblxExecutorUI.csproj  app.manifest
